--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,16 @@
 
       gtag('config', 'UA-69583716-2');
     </script>
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
+    ></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: 'ca-pub-4018148084244421',
+        enable_page_level_ads: true
+      });
+    </script>
   </head>
   <body>
     <ludan-root></ludan-root>
