add meta to index

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope="" itemtype="http://schema.org/WebSite">
   <head>
     <meta charset="utf-8" />
     <title>Ludan Technology</title>
     <base href="/" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta itemprop="description" content="Angular 8, React and Node.js development" />
+    <meta itemprop="name" content="Ludan Technology Ltd." />
+    <meta itemprop="keywords" content="Angular8,React,Node.js,JavaScript" />
+    <meta itemprop="url" content="https://ludan.io" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
