breadcrumb and headless UT

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
 
       gtag('config', 'UA-69583716-2');
     </script>
-    <script
+    <!-- <script
       async
       src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"
     ></script>
@@ -33,7 +33,7 @@
         google_ad_client: 'ca-pub-4018148084244421',
         enable_page_level_ads: true
       });
-    </script>
+    </script> -->
   </head>
   <body>
     <ludan-root></ludan-root>
