improve schema.org

--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,9 @@
     <title>Ludan Technology</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta itemprop="description" content="Angular 8, React and Node.js development" />
+    <meta itemprop="description" content="Angular 8, React, and Node.js development" />
     <meta itemprop="name" content="Ludan Technology Ltd." />
-    <meta itemprop="keywords" content="Angular8,React,Node.js,JavaScript" />
+    <meta itemprop="keywords" content="Angular8, React, Node.js, JavaScript" />
     <meta itemprop="url" content="https://ludan.io" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Global site tag (gtag.js) - Google Analytics -->
