--- a/src/index.html
+++ b/src/index.html
@@ -34,8 +34,10 @@
         enable_page_level_ads: true
       });
     </script> -->
-  </head>
-  <body>
+      <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+</head>
+  <body class="mat-typography">
     <ludan-root></ludan-root>
   </body>
 </html>
